autoplay chrome fix

--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
 </head>
 
 <body>
-    
     <div id="video-container">
         <div id="video-loading"></div>
-        <video id="video-player" src="resources/video/f4_1.mp4" autoplay autobuffer />
-        
+        <video id="video-player" src="resources/video/f4_1.mp4" autoplay autobuffer muted />
     </div>
     <button onclick="openFullscreen()" id="btn" class="btn btn-warning position-absolute top-0 end-0">Go full screen</button>
 </body>
