--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
         integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="resources/css/main.css">
     <!-- JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
@@ -27,7 +28,10 @@
         <div id="video-loading"></div>
         <video id="video-player" src="resources/video/f4_1.mp4" autoplay autobuffer muted />
     </div>
-    <button onclick="openFullscreen()" id="btn" class="btn btn-warning position-absolute top-0 end-0">Go full screen</button>
+    <div class="position-absolute top-0 end-0 pt-3" id="btn-container">
+        <div onclick="openFullscreen()" class="me-3 text-white fs-3"><i class="fa-solid fa-expand"></i></div>
+        <div onclick="muteToggle()" class="me-3 text-white fs-3" id="volume-btn"><i class="fa-solid fa-volume-xmark"></i></div>
+    </div>
 </body>
 
 </html>
